tests/baselines/reference/suggestionRankingPreferences.errors.txt
tests/cases/compiler/suggestionRankingPreferences.ts(3,13): error TS2552: Cannot find name 'tewnty'. Did you mean 'twenty'?


==== tests/cases/compiler/suggestionRankingPreferences.ts (1 errors) ====
    var twnty;
    var twenty;
    var which = tewnty;
                ~~~~~~
!!! error TS2552: Cannot find name 'tewnty'. Did you mean 'twenty'?